@startuml
'https://plantuml.com/sequence-diagram
title Diagrama de Clase de Modificacdor
skinparam monochrome true
hide circle
skinparam classAttributeIconSize 0
abstract class Modificacdor{
    -limiteParaUso:int
    -vecesUsado:int
    +Modificador(int vecesUsado, int limiteParaUso)
    +actualizarCantidadDeUso():void
    +aplicar(ArrayList<Integer> puntajeRonda,
     ArrayList<Jugador> jugadores):void
    +habilitado():boolean

}
class AnuladorDePuntaje{
    +AnuladorDePuntaje()
    +equals(Object other):boolean
    +aplicar(ArrayList<Interger> puntajeRonda,
    int jugadorPosicion):void

}
class ExclusividadDePuntaje{
    +ExclusividadDePuntaje()
    +equals(Object other):boolean
    +aplicar(ArrayList<Integer> puntajeRonda,
    ArrayList<Jugador> jugadores):void
    +aplicarEfectoExclusividad(ArrayList<Integer> puntajeRonda, int factorEfecto):void
}

class  ModificadorNulo {
    +ModificadorNulo()
    +equals(Object other):boolean
    +aplicar(ArrayList<Integer> puntajeRonda, ArrayList<Jugador> jugadores)
}

class Jugador{
    -nombre:String
    -puntaje:Puntaje
    -multiplicadorActual:Multiplicador
    -modificadorActual:Modificador
    +Jugador(String nombre)
    +tieneMasPuntosQue(Jugador otroJugador):boolean
    +tieneMenosOLosMismosPuntosQue(int otrosPuntos):boolean
    +getNombre():String
    +getPuntaje():Puntaje
    +aplicarNuevoMultiplicador(Multiplicador multiplicador):void
    +obtenerMultiplicadorActual():Multiplicador;
    +obtenerMultiplicador():Multiplicador
    +obtenerMultiplicadoresDisponibles():List<Multiplicador>
    +deshabilitarMultiplicador(Multiplicador modificador):void
    +multiplicadorFueUtilizado(Multiplicador multiplicador):boolean
    +resetearComodines():void
    +aplicarNuevoModificador(Modificador modificador):void
    +actualizarUso(Modificador modificador):void
    +habilitado(Modificador modificador):boolean
    +asignarPuntos():void

}
Modificacdor <|-left- AnuladorDePuntaje
Modificacdor <|-- ExclusividadDePuntaje
Modificacdor <|-- ModificadorNulo
Jugador o-- Modificacdor


@enduml